=== 28.03.2012 / V 1.3.2 ===
 
 * fix error on reset position
 * fix record broken when no weapon equipt and 0s records.