@@ -1,3 +1,9 @@
+=== r25 ==
+
+* Options fix GetActiveTalentGroup()
+* LUA fix GetActiveTalentGroup()
+* remove Old DB fix
+
 === 28.03.2012 / V 1.3.2 ===
  
  * fix error on reset position
